--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Classification</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <style>
         * {
             margin: 0;
@@ -59,6 +60,125 @@
             cursor: pointer;
             border-radius: 6px;
         }
+
+        .container {
+            padding: 2rem;
+            display: flex;
+            gap: 4rem;
+            justify-content: center;
+        }
+
+        h2 {
+            text-align: center;
+            font-size: 4rem;
+        }
+
+        section .boxsection {
+            background-color: rgba(155, 215, 238, 0.849);
+        }
+
+        .box1,
+        .box2,
+        .box3 {
+            height: 24rem;
+            width: 24rem;
+            background-color: #fff;
+            margin: 2rem;
+            border-radius: 11px;
+            box-shadow: 0.1rem 0.2rem 1rem rgb(0, 0, 0.1);
+        }
+
+        .box1 img {
+            height: 20rem;
+            width: 20rem;
+            margin: 2rem;
+            border-radius: 11px;
+        }
+
+        .box2 img {
+            height: 20rem;
+            width: 20rem;
+            margin: 2rem;
+            border-radius: 11px;
+        }
+
+        .box3 img {
+            height: 20rem;
+            width: 20rem;
+            margin: 2rem;
+            border-radius: 11px;
+        }
+
+        p {
+            font-size: 2rem;
+            text-align: center;
+            padding: 20px;
+        }
+
+        footer {
+            min-height: auto;
+            padding-top: -9rem;
+            padding: 2rem;
+        }
+
+        footer .box-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            text-align: center;
+        }
+
+        footer .box-container .box {
+            margin: 2rem;
+            flex: 1 1 25rem;
+        }
+
+        footer .box-container .box p {
+            font-size: 1.5rem;
+            color: black;
+            padding: 1rem 0;
+        }
+
+        footer .box-container .box p i {
+            padding: 1rem;
+            color: #3ed4cd;
+        }
+
+        footer .box-container .box h3 {
+            font-size: 2.5rem;
+            color: rgb(255, 136, 0);
+            padding: 1rem 0;
+        }
+
+        footer .box-container .box a {
+            height: 5rem;
+            width: 5rem;
+            line-height: 4.8rem;
+            text-align: center;
+            border: .1rem solid rgb(0, 0, 0, .1);
+            border-radius: 50%;
+            font-size: 2rem;
+            color: #3ed4cd;
+            margin-right: 1rem;
+        }
+
+        footer .box-container .box a:hover {
+            background-color: rgb(255, 136, 0);
+            color: #fff;
+        }
+
+
+        footer .credit {
+            padding: 2rem 1rem;
+            text-align: center;
+            font-size: 2rem;
+            color: #353333;
+            border-top: 1px solid;
+        }
+
+        footer .credit span {
+            color: rgb(255, 136, 0);
+        }
     </style>
 </head>
 
@@ -66,14 +186,46 @@
     <section class="homepage">
         <div class="content">
             <h1>Flower Classification</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit asperiores alias eos, omnis deleniti
-                ipsum nostrum hic reprehenderit amet repudiandae doloribus cumque saepe, accusantium ducimus quibusdam
-                aut fuga vitae sit!</p>
+            <p>Flower classification involves categorizing different types of flowers based on their visual
+                characteristics and other identifiable traits. The process uses technology, particularly machine
+                learning and computer vision, to automate the identification of flower species from images</p>
 
-            <a href="crop.html"><button>Click Here</button></a>
+            <a href="crop.html"><button>Search Flower</button></a>
 
         </div>
     </section>
+
+    <section class="boxsection">
+        <h2>Classified By.......</h2>
+
+        <div class="container">
+            <div class="box1">
+                <img src="./assest/hm1.jpg">
+                <p>Indian Flower</p>
+            </div>
+            <div class="box2">
+                <img src="./assest/hmm2.jpg">
+                <p>Forigen Flower</p>
+            </div>
+            <div class="box3">
+                <img src="./assest/hmm3.png">
+                <p>Regional Flower</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="box-container">
+            <div class="box">
+                <h3>Contact Details</h3>
+                <p><i class="fas fa-phone"></i> +1137-456-789. </p>
+                <p><i class="fas fa-envelope"></i> moon@gmail.com </p>
+                <p><i class="fas fa-map-marker-alt"></i> Pandharpur - 400123. </p>
+            </div>
+        </div>
+
+        <h1 class="credit"> Made By <span>Group no 8</span> | all right reserved!</h1>
+    </footer>
 
 </body>
 
