--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: url("assest/background.jpg") no-repeat;
+            background: url("./background.jpg") no-repeat;
             background-size: cover;
             background-position: center;
         }
@@ -200,15 +200,15 @@
 
         <div class="container">
             <div class="box1">
-                <img src="./assest/hm1.jpg">
+                <img src="./hm1.jpg">
                 <p>Indian Flower</p>
             </div>
             <div class="box2">
-                <img src="./assest/hmm2.jpg">
+                <img src="./hmm2.jpg">
                 <p>Forigen Flower</p>
             </div>
             <div class="box3">
-                <img src="./assest/hmm3.png">
+                <img src="./hmm3.png">
                 <p>Regional Flower</p>
             </div>
         </div>
